# python

./: .gitignore  Book1.csv  First.pyproj  First.sln  README.md  first.py
Algorithms/: MIT.py  MIT_OOP.py  Udacity Quizzes.py  dijkstra.py  misc.py
First/: First.pyproj  World_Info.csv  first.ipynb  mypolygon.py
Flask-Blog/: .env  flaskblog.py
Python for Data Analysis/: Advertising.html  READ.ME  Test File.txt  Untitled.ipynb
Python-Batch-Files/: Anaconda_Jupyter - Lab - No Browser.bat  JupyterLab.lnk  Python Dev.bat  Python Jupyter.bat
algorithms/: MIT_Algos.py  Think Like a Programmer.py  binary_search_iter.py  build_binary_tree.py  daily_byte.py  daily_byte_test.py  dijkstra.py  divide_and_conquer.py  fibonacci.py  filter_x_rows_every_y_rows.ipynb  game.py  gcd.py  gibonacci.py  gibonacci_map.py  gibonacci_recursive.py  grind_leetcode.py  grind_leetcode_test.py  import turtle.py  insertion_sort.py  leetcode.py  linear-search.py  linked_list.py  linked_list2.py  merge_sort.py  misc.py  pattern.py  recursion.py  selection_sort.py  sort.py  test_binary_search.py  turing_quiz.py
bookmarks-converter/: json_to_.py
fastapi-app/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  FastAPI-App.postman_collection.json  MEMORY.md  README.md  blogs.db  main.py  models.py  newman-results.json  opencode.json  pyproject.toml  requirements.txt
fastapi-app2/: main.py  pyproject.toml
first/: Sample.txt  Sample2.txt
flask-app/: .env  app.py  requirements.txt
flask-blog/: flaskblog.py  (+1 more)
sandbox/: PyWhatKit_DB.txt  path.py  pyproject.toml
(+31 files in other folders)
