[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[project]
name = "fastapi-app"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "fastapi==0.115.0",
    "sqlmodel==0.0.18",
    "uvicorn==0.30.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.9",
    "pre-commit==4.5.1",
]
